EmailSender class created
Changed "Message.java" to "EmailSender.java" and created the class